--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>Qasam Ahmad</title>
+    </head>
+
     <body>
-        <h1>
-            Qasam Ahmad
-        </h1>
-        <p>This is the beginning of my personal website.</p>
+        <img src="logo.png" alt="logo.png" width="626" height="248">
+        <hr>
+        <p><q>This is the beginning of my personal website.</q> - Qasam Ahmad</p>
     </body>
 </html>
