--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
     <head>
         <title>Qasam Ahmad</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
     <body>
-        <img src="logo.png" alt="logo.png" width="626" height="248">
+        <img src="logo.png" alt="logo.png" style="max-width:100%;height:auto;">
         <hr>
         <p><q>This is the beginning of my personal website.</q> - Qasam Ahmad</p>
     </body>
